gitops/manifests/Archive/code-server/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: code-server
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: code-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: code-server
    spec:
      containers:
        - env:
            - name: DOCKER_MODS
              value: linuxserver/mods:code-server-python3|linuxserver/mods:code-server-nodejs|linuxserver/mods:code-server-terraform|linuxserver/mods:code-server-zsh
            - name: PASSWORD
              value: ${ZPASSWORD}
            - name: PGID
              value: "1000"
            # - name: PROXY_DOMAIN
            #   value: codeserver.local.example.com
            - name: PUID
              value: "1000"
            - name: SUDO_PASSWORD
              value: ${ZPASSWORD}
            - name: TZ
              value: America/New_York
            - name: PORT
              value: 8446 code-server
          image: lscr.io/linuxserver/code-server:latest
          name: code-server
          ports:
            - containerPort: 8446
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /config
              name: code-server-claim
      restartPolicy: Always
      volumes:
        - name: code-server-claim
          persistentVolumeClaim:
            claimName: code-server-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: code-server
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: code-server
  name: code-server
spec:
  ports:
    - name: "8446"
      port: 8446
      targetPort: 8446
  selector:
    io.kompose.service: code-server
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: code-server-ingress
  namespace: code-server
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`code-server.local.timmybtech.com`) # create A record in pihole
      kind: Rule
      services:
        - name: code-server
          port: 8446
  tls:
    secretName: local-timmybtech-com-tls # or local-example-com-staging-tls
